--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,15 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - CORS_ORIGINS=${CORS_ORIGINS}
 
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    expose:
-      - "80"  # ✅ doar intern — fără "80:80"
-    depends_on:
-      - backend
+frontend:
+  build:
+    context: ./frontend
+    dockerfile: Dockerfile
+  ports:
+    - "8080:80"  # schimbat din 80:80 în 8080:80
+  depends_on:
+    - backend
+
 
 volumes:
   postgres_data:
