--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/rc-tree": "^1.11.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
