--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "rc-tree": "^5.13.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
