--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,65 @@
-# Use an official Python runtime as a parent image
-FROM python:3.11-slim
+# ============================================
+# Stage 1: Builder
+# ============================================
+FROM python:3.11-slim AS builder
 
-# Set the working directory in the container
+# Set working directory
 WORKDIR /app
 
-# Copy the requirements file into the container at /app
+# Install system dependencies for building Python packages
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements and install Python dependencies
 COPY requirements.txt .
+RUN pip install --no-cache-dir --user -r requirements.txt
 
-# Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+# ============================================
+# Stage 2: Production
+# ============================================
+FROM python:3.11-slim
 
-# Copy the rest of the backend application code into the container at /app
-COPY ./app /app/app
+# Set working directory
+WORKDIR /app
 
-# Command to run the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Install runtime dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libpq5 \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create non-root user for security
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
+# Copy Python dependencies from builder
+COPY --from=builder /root/.local /home/appuser/.local
+
+# Create necessary directories with proper permissions
+RUN mkdir -p /app/logs /app/uploads && \
+    chown -R appuser:appuser /app
+
+# Copy application code
+COPY --chown=appuser:appuser ./app /app/app
+COPY --chown=appuser:appuser ./setari_default.json /app/setari_default.json
+COPY --chown=appuser:appuser ./start.sh /app/start.sh
+
+# Make start script executable
+RUN chmod +x /app/start.sh
+
+# Set PATH to include user's local bin
+ENV PATH=/home/appuser/.local/bin:$PATH
+
+# Switch to non-root user
+USER appuser
+
+# Expose port
+EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+# Run the application using the start script
+CMD ["/app/start.sh"]
