--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,57 @@
-fastapi>=0.115
-uvicorn[standard]>=0.30
-sqlmodel>=0.0.21
-sqlalchemy>=2.0
-pydantic-settings>=2.4
-python-dotenv>=1.0
-psycopg2-binary
-pgvector
-httpx
-python-multipart
-requests
-reportlab>=4.0.0
+# ============================================
+# Core Framework & Server
+# ============================================
+fastapi==0.115.5
+uvicorn[standard]==0.32.1
+gunicorn==23.0.0
+
+# ============================================
+# Database & ORM
+# ============================================
+sqlmodel==0.0.22
+sqlalchemy==2.0.36
+psycopg2-binary==2.9.10
+pgvector==0.3.6
+
+# ============================================
+# Configuration & Environment
+# ============================================
+pydantic==2.10.3
+pydantic-settings==2.6.1
+python-dotenv==1.0.1
+
+# ============================================
+# Authentication & Security
+# ============================================
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
+bcrypt==4.2.1
+
+# ============================================
+# HTTP & API Clients
+# ============================================
+httpx==0.28.1
+requests==2.32.3
+
+# ============================================
+# File Handling & Processing
+# ============================================
+python-multipart==0.0.20
+reportlab==4.2.5
+
+# ============================================
+# AI & Embeddings (Optional - comment if not used)
+# ============================================
+# sentence-transformers==3.3.1
+# torch==2.5.1
+# transformers==4.47.1
+
+# ============================================
+# Email (Optional - comment if not used)
+# ============================================
+# aiosmtplib==3.0.2
+
+# ============================================
+# Utilities
+# ============================================
+python-dateutil==2.9.0.post0
