--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,15 @@
+# ============================================
+# FRONTEND ENVIRONMENT VARIABLES
+# ============================================
+
+# API Backend URL
+# Development: http://localhost:8000 or http://127.0.0.1:8000
+# Production: https://api.yourdomain.com or use relative path (leave empty for same domain)
+# Docker: http://backend:8000 (handled by nginx proxy)
 VITE_API_URL=http://127.0.0.1:8000
+
+# ============================================
+# BUILD CONFIGURATION
+# ============================================
+# Set to 'production' for optimized builds
+NODE_ENV=production
