--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,31 +1,56 @@
+# ============================================
 # Stage 1: Build the React application
+# ============================================
 FROM node:20-alpine AS build
 
 WORKDIR /app
 
-# Copy package.json and package-lock.json
+# Build arguments for environment variables
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
+# Copy package files first for better caching
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install
+# Install dependencies with clean install for reproducibility
+RUN npm ci --no-audit --no-fund
 
-# Copy the rest of the application source code
+# Copy source code
 COPY . .
 
-# Build the application
+# Build the application with production optimizations
 RUN npm run build
 
-# Stage 2: Serve the application with Nginx
+# ============================================
+# Stage 2: Serve with Nginx
+# ============================================
 FROM nginx:stable-alpine
 
-# Copy the built files from the build stage
+# Install curl for health checks
+RUN apk add --no-cache curl
+
+# Copy built files from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy the nginx configuration file
+# Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Create non-root user for nginx
+RUN chown -R nginx:nginx /usr/share/nginx/html && \
+    chown -R nginx:nginx /var/cache/nginx && \
+    chown -R nginx:nginx /var/log/nginx && \
+    touch /var/run/nginx.pid && \
+    chown -R nginx:nginx /var/run/nginx.pid
+
+# Switch to non-root user
+USER nginx
 
 # Expose port 80
 EXPOSE 80
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+    CMD curl -f http://localhost/ || exit 1
 
 # Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
