feat: actualizat frontend + backend osutadouazecisitrei

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -28,7 +28,18 @@ gzip_types
 
 server {
     listen 80;
-    server_name localhost;
+    # For production: chat.legeaaplicata.ro
+    # For local Docker testing: localhost
+    server_name localhost chat.legeaaplicata.ro;
+
+    # ============================================
+    # OPTIONAL: Redirect HTTP to HTTPS
+    # ============================================
+    # Uncomment these lines after SSL is configured:
+    # if ($host = chat.legeaaplicata.ro) {
+    #     return 301 https://$host$request_uri;
+    # }
+
 
     # Security Headers
     add_header X-Frame-Options "SAMEORIGIN" always;
