--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,33 +5,58 @@ APP_NAME="Lege Aplicata"
 ENVIRONMENT=production  # development, staging, production
 
 # ============================================
-# EXTERNAL DATABASE CONFIGURATION
+# DATABASE CONFIGURATION
 # ============================================
-# PostgreSQL Database (Single External Instance)
-PG_HOST=92.180.25.98
-PG_PORT=5433
+# PostgreSQL Database
+#
+# FOR LOCAL DEVELOPMENT (Windows):
+# Use your local network IP where PostgreSQL is running
+# Example: PG_HOST=192.168.1.30, PG_PORT=5432
+#
+# FOR PRODUCTION (Ubuntu Server):
+# If PostgreSQL runs on the same server: PG_HOST=localhost or 127.0.0.1
+# If external: Use the actual IP/hostname
+# Example: PG_HOST=localhost, PG_PORT=5432
+
+PG_HOST=localhost
+PG_PORT=5432
 PG_USER=your_database_user
 PG_PASS=your_database_password_here
 PG_DB=verdict
 
 # Database URLs (constructed from above)
-# Note: All databases use the same external PostgreSQL instance
+# Note: All databases use the same PostgreSQL instance
 DATABASE_URL=postgresql://${PG_USER}:${PG_PASS}@${PG_HOST}:${PG_PORT}/${PG_DB}
 DATABASE_CODURI_URL=postgresql://${PG_USER}:${PG_PASS}@${PG_HOST}:${PG_PORT}/coduri_juridice
 DATABASE_MODELE_URL=postgresql://${PG_USER}:${PG_PASS}@${PG_HOST}:${PG_PORT}/modele_acte
 
 # ============================================
-# OLLAMA AI SERVICE (External)
+# OLLAMA AI SERVICE
 # ============================================
-OLLAMA_URL=http://92.180.25.98:11434
+# FOR LOCAL DEVELOPMENT (Windows):
+# Use your local network IP where Ollama is running
+# Example: OLLAMA_URL=http://192.168.1.30:11434
+#
+# FOR PRODUCTION (Ubuntu Server):
+# If Ollama runs on the same server: http://localhost:11434
+# If external: Use the actual IP/hostname
+OLLAMA_URL=http://localhost:11434
 
 # ============================================
 # CORS CONFIGURATION
 # ============================================
 # Comma-separated list of allowed origins
-# Production: Use your actual domain(s)
-# Development: http://localhost:5173,http://127.0.0.1:5173
-CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+#
+# FOR LOCAL DEVELOPMENT (Windows):
+# CORS_ORIGINS=http://localhost:5174,http://localhost:5173,http://127.0.0.1:5174,http://127.0.0.1:5173
+#
+# FOR PRODUCTION (Ubuntu Server - chat.legeaaplicata.ro):
+# CORS_ORIGINS=https://chat.legeaaplicata.ro,http://chat.legeaaplicata.ro
+#
+# FOR BOTH (recommended during transition):
+# CORS_ORIGINS=http://localhost:5174,http://localhost:5173,https://chat.legeaaplicata.ro,http://chat.legeaaplicata.ro
+
+CORS_ORIGINS=https://chat.legeaaplicata.ro,http://chat.legeaaplicata.ro
 
 # ============================================
 # AUTHENTICATION & SECURITY
