--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.1.1",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
