--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -48,9 +48,9 @@ openpyxl==3.1.2
 # transformers==4.47.1
 
 # ============================================
-# Email (Optional - comment if not used)
+# Email (Required for notifications)
 # ============================================
-# aiosmtplib==3.0.2
+sib-api-v3-sdk==7.6.0
 
 # ============================================
 # Utilities
