--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -39,6 +39,7 @@ requests==2.32.3
 python-multipart==0.0.20
 reportlab==4.2.5
 openpyxl==3.1.2
+python-docx==1.1.2
 
 # ============================================
 # AI & Embeddings (Optional - comment if not used)
