--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -98,10 +98,10 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $server_name;
 
-        # Timeouts
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        # Timeouts - Increased to 3 minutes for slow LLM responses
+        proxy_connect_timeout 180s;
+        proxy_send_timeout 180s;
+        proxy_read_timeout 180s;
 
         # Buffering
         proxy_buffering on;
