--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,6 +40,7 @@ python-multipart==0.0.20
 reportlab==4.2.5
 openpyxl==3.1.2
 python-docx==1.1.2
+matplotlib==3.9.2
 
 # ============================================
 # AI & Embeddings (Optional - comment if not used)
