--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,9 @@ services:
       - backend_logs:/app/logs
       - backend_uploads:/app/uploads
       - ./backend/setari_default.json:/app/setari_default.json:ro
+      # Network Mounts (Host -> Container)
+      - /mnt/juridic_windows:/app/mnt_juridic
+      - /mnt/juridic_windows_18:/app/mnt_juridic_18
     networks:
       - app-network
     healthcheck:
