--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,6 +26,8 @@ python-dotenv==1.0.1
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
 bcrypt==4.2.1
+google-auth==2.37.0
+google-auth-oauthlib==1.2.1
 
 # ============================================
 # HTTP & API Clients
@@ -65,3 +67,4 @@ sib-api-v3-sdk>=7.6.0
 # Utilities
 # ============================================
 python-dateutil==2.9.0.post0
+itsdangerous
