--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -68,3 +68,8 @@ sib-api-v3-sdk>=7.6.0
 # ============================================
 python-dateutil==2.9.0.post0
 itsdangerous
+
+# ============================================
+# Payments
+# ============================================
+stripe==14.1.0
