--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@radix-ui/react-slot": "^1.2.3",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/rc-tree": "^1.11.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jspdf": "^3.0.3",
-    "lucide-react": "^0.548.0",
+    "lucide-react": "^0.561.0",
     "rc-tree": "^5.13.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
