--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,123 +1,58 @@
 # ============================================
-# Rate Limiting
+# Redirects
 # ============================================
-limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
-limit_req_zone $binary_remote_addr zone=general_limit:10m rate=30r/s;
-
-# ============================================
-# Gzip Compression
-# ============================================
-gzip on;
-gzip_vary on;
-gzip_min_length 1024;
-gzip_proxied any;
-gzip_comp_level 6;
-gzip_types
-    text/plain
-    text/css
-    text/xml
-    text/javascript
-    application/json
-    application/javascript
-    application/xml+rss
-    application/rss+xml
-    font/truetype
-    font/opentype
-    application/vnd.ms-fontobject
-    image/svg+xml;
-
 server {
     listen 80;
-    # For production: chat.legeaaplicata.ro
-    # For local Docker testing: localhost
+    server_name verdictline.com www.verdictline.com app.verdictline.com legeaaplicata.ro www.legeaaplicata.ro;
+    return 301 https://chat.legeaaplicata.ro$request_uri;
+}
+
+# ============================================
+# Main Application
+# ============================================
+server {
+    listen 80;
     server_name localhost chat.legeaaplicata.ro;
 
-    # ============================================
-    # OPTIONAL: Redirect HTTP to HTTPS
-    # ============================================
-    # Uncomment these lines after SSL is configured:
-    # if ($host = chat.legeaaplicata.ro) {
-    #     return 301 https://$host$request_uri;
-    # }
-
-
-    # Security Headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https:;" always;
-
-    # Root directory
     root /usr/share/nginx/html;
     index index.html;
 
-    # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log warn;
+    # Permite upload-uri mai mari
+    client_max_body_size 100M;
 
-    # ============================================
-    # Static Files with Caching
-    # ============================================
+    # Compresie Gzip pentru viteză
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
     location / {
         try_files $uri $uri/ /index.html;
-
-        # Apply general rate limiting
-        limit_req zone=general_limit burst=20 nodelay;
     }
 
-    # Cache static assets aggressively
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        access_log off;
-    }
-
-    # Don't cache index.html
-    location = /index.html {
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
-    }
-
-    # ============================================
-    # API Proxy to Backend
-    # ============================================
-    location /api {
-        # Apply API rate limiting
-        limit_req zone=api_limit burst=20 nodelay;
-
-        # Proxy settings
+    location /api/ {
+        # Backend connection (Docker service name)
         proxy_pass http://backend:8000;
-        proxy_http_version 1.1;
 
-        # Headers
+        # === FIX CRITIC TIMEOUT (5 minute) ===
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+        # =====================================
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $server_name;
 
-        # Timeouts - Increased to 3 minutes for slow LLM responses
-        proxy_connect_timeout 180s;
-        proxy_send_timeout 180s;
-        proxy_read_timeout 180s;
-
-        # Buffering
-        proxy_buffering on;
-        proxy_buffer_size 4k;
-        proxy_buffers 8 4k;
-        proxy_busy_buffers_size 8k;
-
-        # WebSocket support (if needed)
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+       # proxy_cookie_path / "/; secure; HttpOnly; SameSite=Lax";
     }
 
-    # Health check endpoint
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
+    # Cache pentru imagini și fișiere statice
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, no-transform";
     }
 }
