--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,9 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.561.0",
     "rc-tree": "^5.13.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.1",
