--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -25,7 +25,7 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 
     location /api/ {
